[package]
name = "pyo3_101"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustmc"
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
statrs =  "0.16.0"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
